hard-gists/3309494/run.log
=== Docker Run Log for 3309494 ===
Started at: Mi 29. Okt 13:48:44 CET 2025

[2025-10-29 13:48:45] START: Running container for 3309494
[2025-10-29 13:48:45] SUCCESS: Container 7d8ba03ca46b6c6dc716405d1dd3e5405346f1aa7af33ff62e8dea9cfd5ea938 started for 3309494
=== Container logs for 3309494 ===
  File "/snippet.py", line 15
    print "Loading..."
    ^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 3309494 ===
[2025-10-29 13:48:47] INFO: Container 7d8ba03ca46b6c6dc716405d1dd3e5405346f1aa7af33ff62e8dea9cfd5ea938 has stopped
